--- a/kafka/docker-compose-kafka.yml
+++ b/kafka/docker-compose-kafka.yml
@@ -1,22 +1,31 @@
-zookeeper:
+version: '2'
+services:
+  # https://akageun.github.io/2020/05/01/docker-compose-kafka-cluster-manager.html
+  # https://www.programmersought.com/article/64294852475/
+  # https://bigdatalab.tistory.com/26
+  zookeeper:
     image: zookeeper
     container_name: zookeeper
     ports:
       - "2181:2181"
+      
+  # docker exec -it kafka bash
+  # cd opt/kafka
+  # ./bin/kafka-topics.sh --create --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test-topic
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
     ports:
       - "9092:9092"
     environment:
-      # JMX_PORT: 9093
-      # KAFKA_JMX_OPTS: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.rmi.port=9093
-      KAFKA_ADVERTISED_HOST_NAME: host.docker.internal
-      # KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      # KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      JMX_PORT: 9093
+#      KAFKA_JMX_OPTS: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.rmi.port=9093
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      
+  # https://www.youtube.com/watch?v=enqqp2ZIEyE
   kafka_manager:
     image: hlebalbau/kafka-manager:stable
     container_name: kafka-manager
@@ -28,4 +37,3 @@ zookeeper:
       KAFKA_MANAGER_AUTH_ENABLED: "true"
       KAFKA_MANAGER_USERNAME: username
       KAFKA_MANAGER_PASSWORD: password
-      KM_ARGS: -Djava.net.preferIPv4Stack=true
